Fixed issue where menu would break in Chrome.

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -34,7 +34,7 @@ header a:hover {
 @media only screen and (min-width: 40.063em) and (max-width: 55em) {
   .top-bar {
     margin: 0px auto;
-    width: 34.250em;
+    width: 35em;
   }
 }
 
